--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "winston": "^2.3.1",
-    "winston-cloudwatch": "^1.11.3"
+    "winston-cloudwatch": "^1.11.3",
+    "winston-couchdb": "^0.6.3",
+    "winston-mail": "^1.3.0",
+    "winston-sns": "^0.2.4"
   }
 }
