another variant of logging via syslog

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "winston-cloudwatch": "^1.11.3",
     "winston-couchdb": "^0.6.3",
     "winston-mail": "^1.3.0",
-    "winston-sns": "^0.2.4"
+    "winston-sns": "^0.2.4",
+    "winston-syslog": "^1.2.6"
   }
 }
